# research2md

./: LICENSE  README.md  pyproject.toml
docs/: plan.md
scripts/: run_golden_tests.sh
termdive/: __init__.py  cli.py  config.py  logging.py
termdive/analysis/: __init__.py  analyzer_agent.py  models.py  parsers.py
termdive/artifacts/: __init__.py  manifest.py
termdive/export/: __init__.py  pdf_exporter.py
termdive/markdown/: __init__.py  generator.py  markitdown_extractor.py
termdive/pipeline/: __init__.py  run_manager.py
termdive/prompts/: __init__.py  analysis_outline_v1.prompt  deep_search_v1.prompt
termdive/providers/: __init__.py  base.py  claude_agent_client.py  gemini_adapter.py  openai_adapter.py
